# internal/server/grpc.go
@@ -3,7 +3,7 @@ package server
 import (
 	appv1 "github.com/f-rambo/ocean/api/app/v1"
 	clusterv1 "github.com/f-rambo/ocean/api/cluster/v1"
-	helloworldv1 "github.com/f-rambo/ocean/api/helloworld/v1"
+	servicev1 "github.com/f-rambo/ocean/api/service/v1"
 	"github.com/f-rambo/ocean/internal/conf"
 	"github.com/f-rambo/ocean/internal/service"
 
@@ -13,7 +13,7 @@ import (
 )
 
 // NewGRPCServer new a gRPC server.
-func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, cluster *service.ClusterService, app *service.AppService, logger log.Logger) *grpc.Server {
+func NewGRPCServer(c *conf.Server, cluster *service.ClusterService, app *service.AppService, services *service.ServicesService, logger log.Logger) *grpc.Server {
 	var opts = []grpc.ServerOption{
 		grpc.Middleware(
 			recovery.Recovery(),
@@ -28,8 +28,8 @@ func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, cluster *ser
 		opts = append(opts, grpc.Address(addr))
 	}
 	srv := grpc.NewServer(opts...)
-	helloworldv1.RegisterGreeterServer(srv, greeter)
 	clusterv1.RegisterClusterServiceServer(srv, cluster)
 	appv1.RegisterAppServiceServer(srv, app)
+	servicev1.RegisterServiceServiceServer(srv, services)
 	return srv
 }
