# internal/server/http.go
@@ -3,7 +3,7 @@ package server
 import (
 	appv1 "github.com/f-rambo/ocean/api/app/v1"
 	clusterv1 "github.com/f-rambo/ocean/api/cluster/v1"
-	helloworldv1 "github.com/f-rambo/ocean/api/helloworld/v1"
+	servicev1 "github.com/f-rambo/ocean/api/service/v1"
 	"github.com/f-rambo/ocean/internal/conf"
 	"github.com/f-rambo/ocean/internal/service"
 
@@ -13,7 +13,7 @@ import (
 )
 
 // NewHTTPServer new an HTTP server.
-func NewHTTPServer(c *conf.Server, greeter *service.GreeterService, cluster *service.ClusterService, app *service.AppService, logger log.Logger) *http.Server {
+func NewHTTPServer(c *conf.Server, cluster *service.ClusterService, app *service.AppService, services *service.ServicesService, logger log.Logger) *http.Server {
 	var opts = []http.ServerOption{
 		http.Middleware(
 			recovery.Recovery(),
@@ -28,8 +28,8 @@ func NewHTTPServer(c *conf.Server, greeter *service.GreeterService, cluster *ser
 		opts = append(opts, http.Address(addr))
 	}
 	srv := http.NewServer(opts...)
-	helloworldv1.RegisterGreeterHTTPServer(srv, greeter)
 	clusterv1.RegisterClusterServiceHTTPServer(srv, cluster)
 	appv1.RegisterAppServiceHTTPServer(srv, app)
+	servicev1.RegisterServiceServiceHTTPServer(srv, services)
 	return srv
 }
